--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body    {
     background-color: #393939;
-    color: #ff5a09;
+    color: #ec7f37;
     font-size: 16px;
 }
 #about, #projects  {
@@ -24,7 +24,7 @@ body    {
     
 }
 #project-banner, #contact-me {
-    background-color: #ec7f37;
+    background-color: #ff5a09;
     color: #393939;
     text-align: center;
     margin-top: 30px;
@@ -35,4 +35,8 @@ h2  {
 }
 #Roy    {
     border-radius: 50%;
+}
+#contact-info   {
+    margin-top: 30px;
+    line-height: 30px;
 }
