--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,15 +6,29 @@ body    {
 #about, #projects  {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 10px;
     padding: 5px;
 }
 .card-body  {
     align-content: center;
 }
-#code   {
-    height: auto;
+#carousel-img1   {
+    height: 400px;
+    margin-top: 10px;
 }
+#carousel-img2   {
+    height: 400px;
+    margin-top: 10px;
+}
+#carousel-img3   {
+    height: 400px;
+    margin-top: 10px;
+}
+#carousel-img4   {
+    height: 400px;
+    margin-top: 10px;
+}
+
 .card   {
     margin: auto;
     padding: 10px;
@@ -28,6 +42,7 @@ body    {
     color: #393939;
     text-align: center;
     margin-top: 30px;
+      
 }
 h2  {
     font-size: 50px;
@@ -40,8 +55,8 @@ h2  {
     margin-top: 30px;
     line-height: 30px;
 }
-.jumbotron  {
-    background-color: #393939;
+.card-deck  {
+    margin: auto;
 }
 
 @media screen and (max-width: 992px) {
