--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,19 @@ body    {
     background-color: #393939;
     color: #ec7f37;
     font-size: 16px;
+    margin-top: 15px;
+}
+.navbar {
+    overflow: hidden;
+    z-index: 9;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+.sticky + .content {
+    padding-top: 60px;
 }
 #about, #projects  {
     margin-left: auto;
@@ -57,6 +70,12 @@ h2  {
 }
 .card-deck  {
     margin: auto;
+}
+
+li {
+    list-style-type: none;
+    display: inline-block;
+    font-size: 20px;
 }
 
 @media screen and (max-width: 992px) {
