--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,7 @@ h2  {
 #contact-info   {
     margin-top: 30px;
     line-height: 30px;
+    font-size: 25px;
 }
 .card-deck  {
     margin: auto;
@@ -76,6 +77,13 @@ li {
     display: inline-block;
     font-size: 20px;
 }
+#footer{
+    background-color: #5e5d5d;
+    text-align: center;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 @media screen and (max-width: 992px) {
     
@@ -83,12 +91,17 @@ li {
         margin: auto;
         width: auto;
     }
+    .btn    {
+        margin: 5px;
+    }
 }
 @media screen and (max-width: 768px)    {
     h5   {
+        font-size: 10px;
+    }
+    #contact-info   {
         font-size: 12px;
     }
-    
 }
 @media screen and (max-width: 575px)    {
     h5   {
