--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,8 @@ h1{
     padding-top: 60px;
 }
 #about, #projects  {
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 10px;
-    padding: 5px;
+    padding: 14px;
 }
 .card-body  {
     align-content: center;
@@ -50,15 +48,15 @@ h1{
     padding: 10px;
 }
 .row    {
-    margin: 10px;
-    
+    margin-top: 10px;
+        
 }
 #project-banner, #contact-me {
     background-color: blue;
     color: white;
     text-align: center;
-    padding: 20px;
-    margin: 20px;      
+    padding: 15px;
+    margin-top: 20px;      
 }
 h2  {
     font-size: 50px;
@@ -104,7 +102,7 @@ li {
         width: auto;
     }
     .btn    {
-        margin: 5px;
+        margin: 10px;
     }
 }
 @media screen and (max-width: 768px)    {
